deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wisecow-deployment
  labels:
    app: wisecow
spec:
  replicas: 3
  selector:
    matchLabels:
      app: wisecow
  template:
    metadata:
      labels:
        app: wisecow
    spec:
      containers:
      - name: wisecow-container
        image: mano7kumarasamy/assessment:latest
        ports:
        - containerPort: 4499
        resources:
          limits:
            memory: 400Mi
          requests:
            memory: 400Mi
            cpu: 100m
        imagePullPolicy: IfNotPresent
---
apiVersion: v1
kind: Service
metadata:
  name: wisecow-service
spec:
  type: NodePort
  selector:
    app: wisecow
  ports:
    - port: 4499
      targetPort: 4499
      nodePort: 30080
      protocol: TCP
